...
    FamilyFilmAppTheme {
        HomeContent(
            mediaItems = flowOf(
                PagingData.from(
                    listOf(
                        Media().copy(
                            title = "Matrix",
                            overview = """
                        "Trata sobre un programador que descubre que la realidad en la que vive es
                         una simulación creada por máquinas."
                            """.trimIndent(),
                            posterPath = "https://image.tmdb.org/t/p/w500/ar2h87jlTfMlrDZefR3VFz1SfgH.jpg",
                        ),
...
